# PropManager

./: CMakeLists.txt  Doxyfile.in  README.md
include/: PropManager.h
source/DragonManager/: CMakeLists.txt
source/DragonManager/include/: DragonManager.h
source/DragonManager/src/: DragonInterfaces.cpp  DragonManager.cpp  DragonManager_setters.cpp
source/GalpropManager/: CMakeLists.txt
source/GalpropManager/include/: GalpropManager.h
source/GalpropManager/src/: GalpropManager.cpp  GalpropManager_setters.cpp
src/: PropManager.cpp
test/test_dragon/: CMakeLists.txt
test/test_dragon/src/: test.cpp
test/test_galprop/: CMakeLists.txt
test/test_galprop/src/: test.cpp
